--- a/package.json
+++ b/package.json
@@ -1,20 +1,33 @@
 {
-	"name": "react-starter",
-	"version": "1.3.1",
-	"private": true,
-	"dependencies": {
-		"eslint-config-technigo": "^1.5.0",
-		"eslint-plugin-jsx-a11y": "^6.0.3",
-		"react": "^16.2.0",
-		"react-dom": "^16.2.0",
-		"react-router-dom": "^4.2.2",
-		"react-scripts": "1.0.16",
-		"react-scroll": "^1.7.8"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"eject": "react-scripts eject",
-		"lint": "eslint ."
-	}
+  "name": "react-starter",
+  "version": "1.3.1",
+  "private": true,
+  "dependencies": {
+    "eslint-config-technigo": "^1.5.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.16",
+    "react-scroll": "^1.7.8"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
+    "lint": "eslint ."
+  },
+  "description": "This app has been generated using `create-react-app`, then cleaned up a little so we have a project with just the elements we need to get started.",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/stuven1/portfolio.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/stuven1/portfolio/issues"
+  },
+  "homepage": "https://github.com/stuven1/portfolio#readme"
 }
