--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.16",
-    "react-scroll": "^1.7.8"
+    "react-scroll": "^1.7.8",
+    "react-typing-animation": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
